Added images Folder

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <section class="jumbotron text-center bg-dark text-white" style="margin-bottom: 0px;">
         <div class="container">
             <h1>James Shobbrook</h1>
-            <p class="lead">I'm a Computing Graduate with experience in developing web/desktop/mobile software,<br> currently looking for software engineering positions.</p>
+            <p class="lead">I'm a Computing Graduate with experience in developing various web applications<br> currently looking for software engineering positions.</p>
             <h3>Experience</h3>
-            <p class="lead">I have experience in C#, Java, Python, SQL, HTML/CSS, JavaScript, Node.js, Angular, ASP.NET and AWS.</p>
+            <p class="lead">I have experience in PHP, Laravel, C#, Java, SQL, HTML/CSS, JavaScript, jQuery and ASP.NET</p>
         </div>
-        <a class="btn btn-lg text-white" href="https://github.com/JordHall" style="text-decoration: none"><i class="fab fa-github fa-lg" style="color: white" aria-hidden="true"></i> GitHub</a>
-        <a class="btn btn-lg text-white" href="https://linkedin.com/in/jordhall" style="text-decoration: none"><i class="fab fa-linkedin fa-lg" style="color: white" aria-hidden="true"></i> LinkedIn</a>
+        <a class="btn btn-lg text-white" href="https://github.com/james-shobbrook" style="text-decoration: none"><i class="fab fa-github fa-lg" style="color: white" aria-hidden="true"></i> GitHub</a>
+        <a class="btn btn-lg text-white" href="https://www.linkedin.com/in/james-shobbrook/" style="text-decoration: none"><i class="fab fa-linkedin fa-lg" style="color: white" aria-hidden="true"></i> LinkedIn</a>
     </section>
     <div class="album py-5 bg-light">
         <div class="container">
@@ -29,19 +29,19 @@
                     <div class="card sm-4 shadow-sm">
                         <img src="images/triviapp.png" style="height: auto; width: 100%">
                         <div class="card-body">
-                            <h3>Triviapp</h3>
-                            <p class="card-text">A Trivia Web App built in ASP.NET that allows users to create and play quizzes online.</p>
+                            <h3>National University Sports</h3>
+                            <p class="card-text">Sports League Management System with Social Media Aspects. Built with PHP/Laravel implementing Test Driven Development.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
-                                    <span class="badge badge-info">C#</span>
-                                    <span class="badge badge-info">ASP.NET</span>
-                                    <span class="badge badge-info">MySQ</span>
-                                    <span class="badge badge-info">AWS</span>
+                                    <span class="badge badge-info">PHP</span>
+                                    <span class="badge badge-info">Laravel</span>
+                                    <span class="badge badge-info">MySQL</span>
+                                    <span class="badge badge-info">jQuery</span>
                                     <span class="badge badge-dark">Web App</span>
                                     <span class="badge badge-dark">Coursework</span>
                                 </div>
                                 <div class="btn-group">
-                                    <a href="https://github.com/JordHall/Triviapp"><button type="button" class="btn btn-sm btn-outline-secondary">View on GitHub</button></a>
+                                    <a href="https://github.com/james-shobbrook/NationalUniversitySports"><button type="button" class="btn btn-sm btn-outline-secondary">View on GitHub</button></a>
                                 </div>
                             </div>
                         </div>
@@ -51,22 +51,22 @@
                     <div class="card mb-4 shadow-sm">
                         <img src="images/spook_others.png" style="height: auto; width: 100%">
                         <div class="card-body">
-                            <h3>Spook Others</h3>
-                            <p class="card-text">Android app that allows you to play spooky sounds over bluetooth speakers to secretly scare people.</p>
+                            <h3>Apex Library Management System</h3>
+                            <p class="card-text">A Library Management System Built with Java using NetBeans</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <span class="badge badge-info">Java</span>
-                                    <span class="badge badge-dark">Android App</span>
-                                    <span class="badge badge-dark">Project</span>
+                                    <span class="badge badge-dark">NetBeans</span>
+                                    
                                 </div>
                                 <div class="btn-group">
-                                    <a href="https://github.com/JordHall/SpookOthers"><button type="button" class="btn btn-sm btn-outline-secondary">View on GitHub</button></a>
+                                    <a href="https://github.com/james-shobbrook/Apex-Library"><button type="button" class="btn btn-sm btn-outline-secondary">View on GitHub</button></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+               <!--  <div class="col-lg-4">
                     <div class="card mb-4 shadow-sm">
                         <img src="images/placeholder.png" style="height: auto; width: 100%">
                         <div class="card-body">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
