--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card sm-4 shadow-sm">
-                        <img src="images/NUS-Logo.jpg" style="height: auto; width: 100%">
+                        <!-- <img src="images/NUS-Logo.jpg" style="height: auto; width: 100%"> -->
                         <div class="card-body">
                             <h3>National University Sports</h3>
                             <p class="card-text">Sports League Management System with Social Media Aspects. Built with PHP/Laravel implementing Test Driven Development.</p>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card mb-4 shadow-sm">
-                        <img src="images/apex.png" style="height: auto; width: 100%">
+                        <!-- <img src="images/apex.png" style="height: auto; width: 100%"> -->
                         <div class="card-body">
                             <h3>Apex Library Management System</h3>
                             <p class="card-text">A Library Management System Built with Java using NetBeans</p>
